--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script src="jquery-ui-1.11.4.custom/jquery-ui.min.js"></script>
 	<script src="oldWindow.js"></script>
 	<script src="windows.js"></script>
-	<script src="xmlhandler.js"></script>
+	<script src="xmlfilequery.js"></script>
 	<script> //jquery
 	$(document).ready(function(){
 		//Makes new windows draggable
