Site is ready for viewing, initial content exists

--- a/index.html
+++ b/index.html
@@ -161,7 +161,15 @@
 					</p>
 					<p class="file">
 						<span class="fileicon txt"></span></br />
-						<span class="filename">Dummy file.txt</span>
+						<span class="filename">My Fav Shows.txt</span>
+					</p>
+					<p class="file">
+						<span class="fileicon jpg"></span></br />
+						<span class="filename">Cool Meme Dude.jpg</span>
+					</p>
+					<p class="file">
+						<span class="fileicon txt"></span></br />
+						<span class="filename">Music I like.txt</span>
 					</p>
 				</div>
 			</div>
